# third_party

./: README.md
Imath-3.1.10/: .gitignore  BUILD.bazel
OpenJPH-0.24.1/: .gitignore  MODULE.bazel
OpenJPH-0.24.1/src/apps/common/: ojph_threads.h
OpenJPH-0.24.1/src/apps/ojph_stream_expand/: threaded_frame_processors.cpp  threaded_frame_processors.h
OpenJPH-0.24.1/src/apps/others/: ojph_threads.cpp
boost/: download_and_bazelize_boost_library.sh
boost/beast-boost-1.89.0/: .gitignore  BUILD.bazel  MODULE.bazel
boost/coroutine2-boost-1.89.0/: MODULE.bazel
boost/regex-boost-1.89.0/: MODULE.bazel
c-blosc2-2.12.0/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  add_build_file.patch
cpuinfo/src/arm/windows/: init.c
curl-7.69.1/: .gitignore  BUILD.bazel
flip-1.3/: .bazelrc  .gitignore  BUILD.bazel  Bazel.md
flip-1.4/: BUILD.bazel
flip-1.6/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
glew-2.2.0/: MODULE.bazel
glm-1.0.1-bcr-edition/: BUILD.bazel  BazelizationNotes.md
glm-1.0.1-bcr-edition/test/: MODULE.bazel
glm-1.0.1-bcr-edition/test/core/: BUILD.bazel
libdeflate-1.20/: BUILD.bazel
openexr/website/: index.rst
rules_spring/examples/helloworld/src/main/java/com/sample/: SampleRest.java
spdlog-1.14.1/: BUILD.bazel
tinyobjloader/models/: cube_w_BOM.mtl  issue-391.mtl
tinyobjloader/tests/: tester.cc
xz-5.4.5/: BUILD.bazel  MODULE.bazel  config.lzma-windows.h  notes.md  tools.bzl  update_lzma_config_header.sh
xz-5.4.5/tests/: test_bcj_exact_size.c  test_check.c  test_lzip_decoder.c  test_memlimit.c
